# data-quality-reports

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  data_quality_report.py  dqr.ipynb  pyproject.toml
.github/workflows/: python-package.yml
data_quality_reports/: data_quality_report.py  dqr.py
docs/: LICENSE.md
notebooks/: dqr.ipynb
tests/: test_dqr.py
tests/fixtures/: _continuous_df_test.csv  _update_categorical_df_test.csv  categorical_data.csv  continuous_data.csv  data_types_test.csv  demo_data.csv
